# AD-Census

./: .gitignore  README.md
AD-Census/: ADCensusStereo.cpp  ADCensusStereo.h  CMakeLists.txt  adcensus_types.h  adcensus_util.cpp  adcensus_util.h  cost_computor.cpp  cost_computor.h  cross_aggregator.cpp  cross_aggregator.h  main.cpp  multistep_refiner.cpp  multistep_refiner.h  scanline_optimizer.cpp  scanline_optimizer.h
